{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 58,
  "lineage": "ce8effdf-db93-33d3-87ef-445b7d80d7a7",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:security-group/sg-0c4a61ca13daab707",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c4a61ca13daab707",
            "ingress": [],
            "name": "sb-cluster-cluster-2023081818201075930000000d",
            "name_prefix": "sb-cluster-cluster-",
            "owner_id": "155849965041",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sb-cluster-cluster"
            },
            "tags_all": {
              "Name": "sb-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:security-group/sg-0e0e94a949d8e4aef",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0e0e94a949d8e4aef",
            "ingress": [],
            "name": "sb-cluster-node-2023081818201075400000000c",
            "name_prefix": "sb-cluster-node-",
            "owner_id": "155849965041",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sb-cluster-node",
              "kubernetes.io/cluster/sb-cluster": "owned"
            },
            "tags_all": {
              "Name": "sb-cluster-node",
              "kubernetes.io/cluster/sb-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-879561217",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c4a61ca13daab707",
            "security_group_rule_id": "sgr-06419d99846b22375",
            "self": false,
            "source_security_group_id": "sg-0e0e94a949d8e4aef",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1057451236",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e0e94a949d8e4aef",
            "security_group_rule_id": "sgr-038177b2bebf853a0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3698811345",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e0e94a949d8e4aef",
            "security_group_rule_id": "sgr-06dbcb4cf6c193648",
            "self": false,
            "source_security_group_id": "sg-0c4a61ca13daab707",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-176295089",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e0e94a949d8e4aef",
            "security_group_rule_id": "sgr-03794fc4037f6aafc",
            "self": false,
            "source_security_group_id": "sg-0c4a61ca13daab707",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3284167463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e0e94a949d8e4aef",
            "security_group_rule_id": "sgr-034adf2015a41e409",
            "self": false,
            "source_security_group_id": "sg-0c4a61ca13daab707",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3499906822",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e0e94a949d8e4aef",
            "security_group_rule_id": "sgr-057be3dadb9fdc30d",
            "self": false,
            "source_security_group_id": "sg-0c4a61ca13daab707",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3023922381",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e0e94a949d8e4aef",
            "security_group_rule_id": "sgr-0d08cb0f8020796dc",
            "self": false,
            "source_security_group_id": "sg-0c4a61ca13daab707",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3877272456",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e0e94a949d8e4aef",
            "security_group_rule_id": "sgr-06461fa081d72c86f",
            "self": false,
            "source_security_group_id": "sg-0c4a61ca13daab707",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3264085608",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e0e94a949d8e4aef",
            "security_group_rule_id": "sgr-0a9dfd9a2fb875394",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1442355594",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e0e94a949d8e4aef",
            "security_group_rule_id": "sgr-082a36f855c6236d8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4054268517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e0e94a949d8e4aef",
            "security_group_rule_id": "sgr-03a6fc732cb251be1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:network-acl/acl-02c172517c882e70d",
            "default_network_acl_id": "acl-02c172517c882e70d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02c172517c882e70d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "155849965041",
            "subnet_ids": [
              "subnet-01af9fa2784f391bb",
              "subnet-0232ca9406aa132f6",
              "subnet-03623f622ecd3a1b5",
              "subnet-06cb7d571d6f48583"
            ],
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:route-table/rtb-06b9047684e86d3a5",
            "default_route_table_id": "rtb-06b9047684e86d3a5",
            "id": "rtb-06b9047684e86d3a5",
            "owner_id": "155849965041",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:security-group/sg-07b89bfce18a9ab12",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07b89bfce18a9ab12",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "155849965041",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0829b66948bb2a6dc",
            "domain": "vpc",
            "id": "eipalloc-0829b66948bb2a6dc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-225-186-178.compute-1.amazonaws.com",
            "public_ip": "3.225.186.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:internet-gateway/igw-019e3f613a2031d40",
            "id": "igw-019e3f613a2031d40",
            "owner_id": "155849965041",
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0829b66948bb2a6dc",
            "association_id": "eipassoc-0999afd0c8d465355",
            "connectivity_type": "public",
            "id": "nat-098dd7933810e4412",
            "network_interface_id": "eni-0f5b70842c443bda4",
            "private_ip": "10.0.89.138",
            "public_ip": "3.225.186.178",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0232ca9406aa132f6",
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07818eda873c3cdfb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-098dd7933810e4412",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07818eda873c3cdfb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019e3f613a2031d40",
            "id": "r-rtb-0b574d4c7c89d03541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b574d4c7c89d0354",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:route-table/rtb-07818eda873c3cdfb",
            "id": "rtb-07818eda873c3cdfb",
            "owner_id": "155849965041",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:route-table/rtb-0b574d4c7c89d0354",
            "id": "rtb-0b574d4c7c89d0354",
            "owner_id": "155849965041",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e3a12793af59643",
            "route_table_id": "rtb-07818eda873c3cdfb",
            "subnet_id": "subnet-06cb7d571d6f48583"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d6f9820239fb827",
            "route_table_id": "rtb-07818eda873c3cdfb",
            "subnet_id": "subnet-01af9fa2784f391bb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd9a11953d7b8937",
            "route_table_id": "rtb-0b574d4c7c89d0354",
            "subnet_id": "subnet-0232ca9406aa132f6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d49678c468e9b96",
            "route_table_id": "rtb-0b574d4c7c89d0354",
            "subnet_id": "subnet-03623f622ecd3a1b5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:subnet/subnet-06cb7d571d6f48583",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cb7d571d6f48583",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155849965041",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:subnet/subnet-01af9fa2784f391bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01af9fa2784f391bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155849965041",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:subnet/subnet-0232ca9406aa132f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0232ca9406aa132f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155849965041",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:subnet/subnet-03623f622ecd3a1b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03623f622ecd3a1b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155849965041",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081f8f0f4450e5b5b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155849965041:vpc/vpc-081f8f0f4450e5b5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c172517c882e70d",
            "default_route_table_id": "rtb-06b9047684e86d3a5",
            "default_security_group_id": "sg-07b89bfce18a9ab12",
            "dhcp_options_id": "dopt-0655e8769dfea8ffc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081f8f0f4450e5b5b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b9047684e86d3a5",
            "owner_id": "155849965041",
            "tags": {
              "Environment": "pre-prd",
              "Name": "sb-main",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "pre-prd",
              "Name": "sb-main",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}